# cmake_minimum_required(VERSION <specify CMake version here>)
project(Projet_Annuel C)
set(CMAKE_C_STANDARD 11)
cmake_minimum_required(VERSION 3.16)
add_executable(Projet_Annuel main.c)
set(CURL_LIBRARY "-lcurl")
find_package(CURL REQUIRED)
include_directories(${CURL_INCLUDE_DIR})
target_link_libraries(Projet_Annuel ${CURL_LIBRARIES})